--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 nav {
     background-color:steelblue;
     padding: 10px;
@@ -7,7 +13,7 @@ nav a {
     display: block;
     padding: 20px;
 }
-hi {
+h1 {
     color: steelblue;
 }
 img {
@@ -49,4 +55,26 @@ footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+/* Class Selectors */
+.box {
+  margin: 1rem;
+  border: 1px solid rgba(0,0,0,.1);
+  padding: 1rem;
+  background-color: #ddd;
+  color: #000;
+}
+aside {
+  margin: 0; 
+  padding: 0; 
+  box-sizing: content-box;
+}
+
+main img {
+  float: right;
+}
+aside h2 {
+  position: absolute;
+  top: 55px;
+  left: 30px;
 }
