--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,5 +1,3 @@
-/* rafting.css */
-/* Import Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap');
 /* Define CSS variables for color schema */
 :root{
@@ -21,14 +19,21 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--primary-color);
 }
 
-p {
-  line-height: 1.6;
+
+/* Style the paragraph */
+section p {
+  max-width: 600px; 
+  margin-top: 45px; 
+  line-height: 1.7;
 }
-.section p {
-  line-height: 1.1;
+h2 {
+  position: relative; 
+  top: 0;
+  left: 40%; 
+  margin-top: 10px; 
+  z-index: 1; 
 }
 
-/* Social Media Links */
 a.social-link {
   text-decoration: none;
 }
@@ -52,19 +57,18 @@ header,.grid, footer {
 .hero h1,.hero article {
   position: absolute;
   top: 45%;
-  left: 55%;
-  transform: translate(-50%, -35%);
-  color: #fff; /* Adjust the color for readability */
-  height: 17cap;
+  left: 54%;
+  transform: translate(-49%, -40%);
+  color: #fff;
+ 
 }    
 
 .hero h1{ 
   background-color: rgba(0, 0, 0, 0.7); 
-  width: 110%;
+  width: 90%;
   height: 7%;
   top: 20%;
   text-align: center;
-  border-radius: 10px;
 }
 
 .hero article {
@@ -83,3 +87,65 @@ header,.grid, footer {
   height: 10cap;
 }
 
+header img {
+  float: left; 
+  max-width: 100%; 
+  height: auto;
+}
+ 
+nav {
+  padding-top: 70px;
+
+}
+/* Style for the navigation bar (adjust as needed) */
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  display: inline-block;
+  margin-right: 70px; /* Adjust the spacing between navigation items */
+}
+
+section {
+  display: flex;
+  flex-wrap: nowrap; /* Prevent wrapping to keep the images in a single line */
+  padding: 5px;
+}
+
+/* Style each figure element */
+figure {
+  margin: 30px;
+  text-align: right;
+}
+
+
+figure img {
+  max-width: 150%; 
+  height: auto; 
+  border: 5px solid #ddd; 
+  border-radius: 5px; 
+  margin-top: 55px; 
+}
+
+/* Style the figcaption */
+figcaption {
+  margin-top: 1px; 
+  font-style: italic;
+  color: #555;
+}
+footer p {
+  float: left;
+  max-width: 100%; 
+  height: auto; 
+  margin-top: 20px; 
+}
+footer a {
+ float: right;
+}
+
+
+
+ 
