--- a/wwr/styles/quiz.css
+++ b/wwr/styles/quiz.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Arial' sans-serif;
     background-color: #f4f4f4;
-    margin: 0;
+    margin: 10%;
     padding: 0;
     display: flex;
     justify-content: center;
@@ -13,18 +13,26 @@ form {
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.0);
-    padding: 20px;
+    padding: 10px;
     max-width: 405px;
     width: 100%;
     box-sizing: border-box;
 }
-
+h5 {
+    background-color: black ;
+    color: #f4f4f4;
+    width: 80%;
+    padding: 4%;
+}
 h1 {
-    text-align: center;
+    position: absolute;
+    top: 2cap;
+    color: blue;
+
 }
 label {
     display: block;
-    margin-bottom: 80px;
+    margin-bottom: 60px;
 }
 input,
 textarea,
@@ -34,17 +42,14 @@ select {
     margin-bottom: 16px;
     box-sizing: border-box;
 } 
-h6 {
-    background-color: blueviolet;
-}
 button {
-    background-color: #007bff;
+    background-color: blue;
     color: #fff;
     padding: 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    width: 100;
+    width: 100%;
 }
 button:hover {
     background-color: #0056b3;
