--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@
   padding: 0;
   box-sizing: border-box;
 }
-header, .grid, footer{
+
+header, .grid, footer {
   max-width: 840px;
   margin: 0 auto;
 }
@@ -14,7 +15,8 @@ nav {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-}   
+}
+
 nav a {
   display: block;
   padding: 0.5rem;
@@ -23,83 +25,76 @@ nav a {
   font-weight: 700;
   color: #fff;
 }
+
 h1 {
   color: steelblue;
-  border: 15px;
   font-size: 1.7rem;
   margin-bottom: 20px;
+  text-align: center; /* Center the heading */
 }
-hr{
+
+hr {
   border: 1px solid steelblue;
   margin-bottom: 15px;
 }
+
 img {
-  width: 150px;
-  height: 300px;
+  width: 100%; /* Make images responsive */
+  height: auto;
   border: 1px solid steelblue;
   padding: 2px;
   box-shadow: 0 0 30px gray;
 }
 
 p {
- padding: 10px;
+  padding: 10px;
+  font-size: 1.1rem;
 }
 
 aside {
-    width: 20rem;
-    margin: 1rem;
-    border: 1px solid rgba(0,0,0,0.2); /* 1️⃣*/
-    padding: 1rem;
-    background-color: #eee;
-    color: #333;
-    text-align: centre;
+  width: 20rem;
+  margin: 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 1rem;
+  background-color: #eee;
+  color: #333;
+  text-align: center;
 }
 
 aside img {
-  width: 300px;
-  height: 400px;
+  width: 10%; /* Make images responsive */
+  height: auto;
 }
+
 main img {
-  width: 150px;
-  height: 200px;
+  width: 100%; /* Make images responsive */
+  height: auto;
+  float: right;
 }
-p { 
+
+p {
   padding: 0;
   font-size: 1.1rem;
 }
 
 footer {
-    margin-top: 15px;
-    border-top: 1px solid #000;
-    text-align: center;
+  margin-top: 15px;
+  border-top: 1px solid #000;
+  text-align: center;
 }
+
 /* Class Selectors */
 .box {
   margin: 1rem;
-  border: 1px solid rgba(0,0,0,.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 1rem;
   background-color: #ddd;
   color: #000;
 }
+
 aside {
   width: 20em;
   text-align: center;
-}
-
-main img {
-  float: right;
-}
-aside h2 {
-  position: absolute;
-  top: 270px;
-  left: 120px;
-  font-size: 1.5rem;
-  color: #fff;
-}
-
-.grid {
-  display: grid;
-  align-items: center;
 }
 
 main {
